...
            self.presenter.restartGame()
        }

        alertPresenter.show(
            in: self,
            model: model,
            accessibilityId: "GameResult"
        )
    }
    func showLoadingIndicator() {
        activityIndicator.isHidden = false /// говорим, что индикатор загрузки не скрыт
        activityIndicator.startAnimating() /// включаем анимацию
    }
...
